--- a/res/layout/browser_item.xml
+++ b/res/layout/browser_item.xml
@@ -18,13 +18,12 @@
  *
 -->
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_height="96dp"
-  android:layout_width="96dp"
-  android:gravity="top|center_horizontal"
-  android:paddingTop="5dp"
-  android:ellipsize="marquee"
-  android:textSize="10dp"
-  android:lines="2"
-  android:text="Text"
-  android:drawablePadding="5dp"
-/>
+    android:layout_width="96dp"
+    android:layout_height="96dp"
+    android:drawablePadding="5dp"
+    android:ellipsize="marquee"
+    android:gravity="top|center_horizontal"
+    android:lines="2"
+    android:paddingTop="5dp"
+    android:text="@string/browser_album_title"
+    android:textSize="10sp" />
