--- a/res/values-tr/arrays.xml
+++ b/res/values-tr/arrays.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
  * ComicsReader is an Android application to read comics
- * Copyright (C) 2011-2012 Cedric OCHS
+ * Copyright (C) 2011-2013 Cedric OCHS
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -34,14 +34,14 @@
         <item>Belirtilmemiş</item>
     </string-array>
     <string-array name="preference_edges_resistance_names">
-        <item>None</item>
-        <item>Weak</item>
-        <item>Medium</item>
-        <item>Strong</item>
+        <item>Yok</item>
+        <item>Zayıf</item>
+        <item>Orta</item>
+        <item>Yüksek</item>
     </string-array>
     <string-array name="preference_page_transition_speed_names">
-        <item>Slow</item>
-        <item>Medium</item>
-        <item>Fast</item>
+        <item>Yavaş</item>
+        <item>Orta</item>
+        <item>Hızlı</item>
     </string-array>
 </resources>
