--- a/res/values-es/arrays.xml
+++ b/res/values-es/arrays.xml
@@ -34,14 +34,14 @@
         <item>Siempre</item>
     </string-array>
     <string-array name="preference_edges_resistance_names">
-        <item>None</item>
-        <item>Weak</item>
-        <item>Medium</item>
-        <item>Strong</item>
+        <item>Ninguno</item>
+        <item>Débil</item>
+        <item>Medio</item>
+        <item>Fuerte</item>
     </string-array>
     <string-array name="preference_page_transition_speed_names">
-        <item>Slow</item>
-        <item>Medium</item>
-        <item>Fast</item>
+        <item>Lento</item>
+        <item>Medio</item>
+        <item>Rápido</item>
     </string-array>
 </resources>
