--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -78,7 +78,10 @@
             android:key="preference_reading_direction"
             android:summary="@string/preference_reading_direction_summary"
             android:title="@string/preference_reading_direction_label" />
-        <CheckBoxPreference android:key="preference_auto_rotate" android:title="@string/preference_auto_rotate_label" android:summary="@string/preference_auto_rotate_summary"/>
+        <CheckBoxPreference
+            android:key="preference_auto_rotate"
+            android:title="@string/preference_auto_rotate_label"
+            android:summary="@string/preference_auto_rotate_summary"/>
     </PreferenceCategory>
     <PreferenceCategory
         android:key="preference_category_advanced"
