--- a/res/layout/bookmarks.xml
+++ b/res/layout/bookmarks.xml
@@ -34,7 +34,8 @@
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:layout_weight="1"
-      android:text="No data"
+      android:gravity="center"
+      android:text="@string/no_data"
     />
     <TextView
       android:layout_width="fill_parent"
