--- a/res/layout/dialog_text.xml
+++ b/res/layout/dialog_text.xml
@@ -32,7 +32,7 @@
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:textAppearance="?android:attr/textAppearanceSmall"
-          android:text="TextView"
+          android:text="@string/no_data"
           android:id="@+id/dialog_text"
           android:layout_gravity="top"
           android:textColorLink="@android:color/white"
