--- a/res/layout/pages_item.xml
+++ b/res/layout/pages_item.xml
@@ -23,7 +23,7 @@
   android:gravity="top|center_horizontal"
   android:textSize="16sp"
   android:textStyle="bold"
-  android:text="Page"
+  android:text="@string/thumbnail"
   android:drawablePadding="5dp"
   android:textColor="@android:color/white"
 />
