Changed: Updated translations

--- a/res/values-es/arrays.xml
+++ b/res/values-es/arrays.xml
@@ -1,5 +1,19 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string-array name="preference_zoom_labels">
+    <item>Ajustar Ancho</item>
+    <item>Ajustar Alto</item>
+    <item>Ajustar Todo</item>
+    <item>100%</item>
+    <item>50%</item>
+    <item>25%</item>
+  </string-array>
+  <string-array name="preference_sample_labels">
+    <item>Automático</item>
+    <item>100%</item>
+    <item>50%</item>
+    <item>25%</item>
+  </string-array>
   <string-array name="preference_overlay_duration_names">
     <item>Nunca</item>
     <item>2 segundos</item>
@@ -17,5 +31,10 @@
     <item>Lento</item>
     <item>Medio</item>
     <item>Rápido</item>
+  </string-array>
+  <string-array name="preference_device_orientation_names">
+    <item>Automático</item>
+    <item>Vertical</item>
+    <item>Horizontal</item>
   </string-array>
 </resources>
