--- a/app/src/main/res/values-v11/styles.xml
+++ b/app/src/main/res/values-v11/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
  * ComicsReader is an Android application to read comics
- * Copyright (C) 2011-2013 Cedric OCHS
+ * Copyright (C) 2011-2018 Cedric OCHS
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -23,4 +23,6 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowActionBarOverlay">true</item>
     </style>
+
+    <style name="Theme" parent="@android:style/Theme.Holo" />
 </resources>
