--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -54,6 +54,18 @@
     <item>2</item>
     <item>3</item>
   </string-array>
+  <string-array name="preference_edges_width_names">
+    <item>Wee small</item>
+    <item>Small</item>
+    <item>Medium</item>
+    <item>Broad</item>
+  </string-array>
+  <string-array name="preference_edges_width_values" translatable="false">
+    <item>4</item>
+    <item>3</item>
+    <item>2</item>
+    <item>1</item>
+  </string-array>
   <string-array name="preference_page_transition_speed_names">
     <item>Slow</item>
     <item>Medium</item>
