--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -72,6 +72,13 @@
             android:summary="@string/preference_edges_resistance_summary"
             android:title="@string/preference_edges_resistance_label" />
         <ListPreference
+            android:defaultValue="@string/preference_edges_width_default"
+            android:entries="@array/preference_edges_width_names"
+            android:entryValues="@array/preference_edges_width_values"
+            android:key="preference_edges_width"
+            android:summary="@string/preference_edges_width_summary"
+            android:title="@string/preference_edges_width_label" />
+        <ListPreference
             android:defaultValue="@string/preference_page_transition_speed_default"
             android:entries="@array/preference_page_transition_speed_names"
             android:entryValues="@array/preference_page_transition_speed_values"
